--- a/email_body.html
+++ b/email_body.html
@@ -2,7 +2,9 @@
     <body>
         <p>Olá {0}!</p>
         <p><img src="cid:imagem" alt="Imagem incorporada"></p>
-        <p>Aqui está a sua chave de acesso: {1}</p>
+        <p>Este é um emal enviado a multuplos destinatários por um script python</p>
+        <p>onde alguns atributos são preenchidos dinamicamente -> {1}</p>
+        <a href="https://github.com/artphil/email_utils">clique aqui para ter acesso ao código</a>
         <p>Atenciosamente,<br>Sua Empresa</p>
     </body>
 </html>
